--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="tap" class="antialiased text-gray-800 bg-slate-50">
+	<body data-sveltekit-preload-data="tap" class="antialiased text-neutral bg-base-100">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
